@@ -48,3 +48,5 @@ New internal features:
   basically are what WorkspaceMember, WorkspaceReader, SectionReader should have
   been in the first place.
 - Default Tree cache configuration takes care of BTree proxies as well
+- Moved some code from CPSMembershipTool to CPSDefault.MembershipTool. This code
+  was too high-level for CPSCore.
